--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-      integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-      crossorigin="anonymous"
-    ></script>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
       crossorigin="anonymous"
     ></script>
 
@@ -46,7 +46,7 @@
         What D&D 5e Adventure Should You Play?
       </h1>
     </div>
-    <div class="mx-10">
+    <div class="mx-64">
       <div
         class="grid place-content-center m-5 py-4 px-3 rounded-md gap-y-6 grid-cols-1"
         style="background-color: #ebebe6; border: 3px solid #9d0a0e"
@@ -58,7 +58,7 @@
             >
             <div
               class="form-select-sm grid place-content-center"
-              style="background-color: #9d0a0e"
+              style="background-color: #9d0a0e; border-radius: 0.25rem"
             >
               <input
                 id="ex2"
@@ -133,7 +133,60 @@
             </select>
           </div>
         </div>
-        <div>There is something here</div>
+        <button
+          class="rounded-full font-medium px-5 py-1"
+          style="border: 1px solid #9d0a0e; color: #9d0a0e"
+          data-bs-toggle="collapse"
+          data-bs-target="#content"
+          aria-expanded="false"
+          aria-controls="collapse"
+        >
+          View More Filters
+        </button>
+        <div class="collapse" id="content">
+          <div class="grid grid-cols-3 gap-x-4 gap-y-2">
+            <div>
+              <label for="location" class="form-label font-bold"
+                >Main RPG Pillar</label
+              >
+              <select id="location" class="form-select form-select-sm">
+                <option value="Combat">Combat</option>
+                <option value="Roleplay">Roleplay</option>
+                <option value="Exploration">Exploration</option>
+              </select>
+            </div>
+            <div>
+              <label for="location" class="form-label font-bold"
+                >Main Villain</label
+              >
+              <select id="location" class="form-select form-select-sm">
+                <option value="Dragon">Dragon</option>
+                <option value="Giant">Giant</option>
+                <option value="Vampire">Vampire</option>
+                <option value="Exploration">Factions/ Organization</option>
+                <option value="Elemental">Elemental</option>
+                <option value="Demon/Devil">Demon/Devil</option>
+                <option value="Monsters">Monsters</option>
+                <option value="Fey">Fey</option>
+              </select>
+            </div>
+            <div>
+              <label for="location" class="form-label font-bold">Theme</label>
+              <select id="location" class="form-select form-select-sm">
+                <option value="Heroic">Heroic</option>
+                <option value="Grim & Gritty">Grim & Gritty</option>
+                <option value="Horror/ Thriller">Horror/ Thriller</option>
+                <option value="Lighthearted">Lighthearted</option>
+                <option value="Civil War/Political War/War">
+                  Civil War/Political War/War
+                </option>
+                <option value="Steampunk/Post War">Steampunk/Post War</option>
+                <option value="Supernatural">Supernatural</option>
+                <option value="School Life">School Life</option>
+              </select>
+            </div>
+          </div>
+        </div>
         <button
           class="rounded-full font-medium px-5 py-1"
           style="background-color: #9d0a0e; color: #ebebe6"
@@ -145,21 +198,37 @@
         class="grid place-content-center m-5 py-4 px-3 rounded-md gap-y-6 grid-cols-1"
       >
         <div
-          class="grid gap-4 p-4 grid-cols-2 rounded-md"
+          id="card"
+          class="flex flex-row p-4 space-x-5 rounded-md"
           style="background-color: #ffffff"
         >
-          <div class="rounded-md">
-            <img src="./src/award05.jpg" class="bg-cover bg-center" />
+          <div class="rounded-md overflow-hidden">
+            <img
+              src="https://www.dndbeyond.com/avatars/28075/491/637961623572526419.jpeg"
+            />
           </div>
-          <div class="grid gap-2 grid-cols-1">
-            <h2 class="font-bold text-lg">The title</h2>
-            <p>blurb</p>
-            <button
-              class="rounded-full font-medium px-5 py-1"
-              style="background-color: #353535; color: #ebebe6"
-            >
-              Play This Book!
-            </button>
+          <div class="flex flex-col space-y-5 justify-center">
+            <h2 class="font-extrabold text-2xl" style="color: #9d0a0e">
+              Dragonlance: Shadow of the Dragon Queen
+            </h2>
+            <p>
+              Dragonlance®: Shadow of the Dragon Queen™ is a tale of conflict
+              and defiance set during the legendary War of the Lance. Create
+              characters from Krynn, the world of the Dragonlance setting, then
+              march them to the front lines of battle against the terrifying
+              Dragon Armies. A Dungeons & Dragons® adventure that takes
+              characters from 1st to 11th level.
+            </p>
+            <div>
+              <a
+                class="rounded-full font-medium px-5 py-1 bg-gray-900 hover:bg-gray-700"
+                style="color: #ebebe6"
+                href="https://www.dndbeyond.com/marketplace/adventures/dragonlance-shadow-of-the-dragon-queen-digital-pre"
+                target="_blank"
+              >
+                Play This Book!
+              </a>
+            </div>
           </div>
         </div>
       </div>
