--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       </div>
     </div>
 
-    <script>
+    <script type="text/javascript">
       $(document).ready(function () {
         $('.tooltip').tooltip();
         /* Example 2 */
